--- a/deploy/index.html
+++ b/deploy/index.html
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-O5HRGG7M.js" type="module"></script></body>
+<script src="polyfills-RX4V3J3S.js" type="module"></script><script src="main-LECLAAAK.js" type="module"></script></body>
 </html>
